<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/money_layout"
    android:background="#7c42bd"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:clipToPadding="false">

    <EditText
        android:id="@+id/input_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_weight="2"
        android:gravity="center"
        android:background="#7c42bd"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:shadowColor="#fff"
        android:elevation="10dp"
        android:hint="Addition" />

    <Button
        android:id="@+id/input_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:text="Add" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:id="@+id/money_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:gravity="center"
            android:hint="@string/app_name"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="45sp"
            android:background="#7c42bd"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"
            android:elevation="10dp"
            android:visibility="gone">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </FrameLayout>
    </FrameLayout>

    <Button
        android:id="@+id/output_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:text="subtract" />

    <EditText
        android:id="@+id/output_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:inputType="number"
        android:gravity="center"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:background="#7c42bd"
        android:shadowColor="#fff"
        android:elevation="10dp"
        android:hint="Subtraction" />

</LinearLayout>